fixed links appearing as fixed on mobile (#79)

--- a/src/components/sections/Contact/Links/Links.module.scss
+++ b/src/components/sections/Contact/Links/Links.module.scss
@@ -1,8 +1,8 @@
 @import 'styles/palette';
 
 .root {
-	position: absolute;
-	bottom: 1rem;
+	// position: absolute;
+	margin-bottom: 1rem;
 	width: 100%;
 
 	display: flex;
